--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,21 @@ body{
 input:focus, textarea:focus, select:focus{
   outline: none;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #12151c;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #fff5;border-radius:40px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
